fixed sprinkle cut off

--- a/public/style.css
+++ b/public/style.css
@@ -322,7 +322,7 @@ img.square-dots {
 }
 
 img.sprinkles {
-  right: -240px;
+  right: -260px;
   bottom: -140px;
 }
 
